--- a/.github/workflows/terraform-ci-cd.yml
+++ b/.github/workflows/terraform-ci-cd.yml
@@ -4,31 +4,38 @@ on:
   push:
     branches:
       - main
-
-permissions:
-  id-token: write
-  contents: read
+  pull_request:
 
 jobs:
   terraform:
-    name: "Terraform Apply"
+    name: "Terraform Deployment"
     runs-on: ubuntu-latest
 
     steps:
-    - name: Checkout Code
-      uses: actions/checkout@v4
+      - name: Checkout repository
+        uses: actions/checkout@v4
 
-    - name: Setup Terraform
-      uses: hashicorp/setup-terraform@v2
-      with:
-        terraform_version: 1.6.0
+      - name: Configure AWS credentials
+        uses: aws-actions/configure-aws-credentials@v2
+        with:
+          role-to-assume: arn:aws:iam::533267007721:role/GitHubRole
+          role-session-name: GitHubActionsSession
+          aws-region: us-east-1  # Change this to your AWS region
 
-    - name: Terraform Init
-      run: terraform init
+      - name: Setup Terraform
+        uses: hashicorp/setup-terraform@v3
+        with:
+          terraform_version: latest
 
-    - name: Terraform Plan
-      run: terraform plan
+      - name: Terraform Init
+        run: terraform init
 
-    - name: Terraform Apply
-      run: terraform apply -auto-approve
+      - name: Terraform Validate
+        run: terraform validate
 
+      - name: Terraform Plan
+        run: terraform plan -out=tfplan
+
+      - name: Terraform Apply
+        if: github.ref == 'refs/heads/main'
+        run: terraform apply -auto-approve tfplan
