--- a/.github/workflows/terraform-ci-cd.yml
+++ b/.github/workflows/terraform-ci-cd.yml
@@ -16,6 +16,12 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v4
 
+      - name: Debug GitHub OIDC Token
+        run: |
+          echo "Printing GitHub OIDC Token"
+          curl -H "Authorization: bearer $ACTIONS_ID_TOKEN_REQUEST_TOKEN" "$ACTIONS_ID_TOKEN_REQUEST_URL" -o github-token.jwt
+          cat github-token.jwt
+
       - name: Configure AWS credentials
         uses: aws-actions/configure-aws-credentials@v2
         with:
