--- a/.github/workflows/terraform-ci-cd.yml
+++ b/.github/workflows/terraform-ci-cd.yml
@@ -30,7 +30,7 @@ jobs:
       - name: Configure AWS credentials
         uses: aws-actions/configure-aws-credentials@v2
         with:
-          role-to-assume: arn:aws:iam::533267007721:role/GitHubRole
+          role-to-assume: ${{ secrets.AWS_ROLE_ARN }}
           role-session-name: GitHubActionsSession
           aws-region: us-east-1  # Change this to your AWS region
 
@@ -38,6 +38,9 @@ jobs:
         uses: hashicorp/setup-terraform@v3
         with:
           terraform_version: latest
+      
+      - name: Test AWS Authentication
+        run: aws sts get-caller-identity
 
       - name: Terraform Init
         run: terraform init -upgrade
