--- a/.github/workflows/terraform-ci-cd.yml
+++ b/.github/workflows/terraform-ci-cd.yml
@@ -23,6 +23,7 @@ jobs:
       - name: Configure AWS credentials
         run: |
           echo "Configuring AWS credentials..."
+          mkdir -p ~/.aws
           echo "[default]" > ~/.aws/credentials
           echo "aws_access_key_id=${{ secrets.AWS_ACCESS_KEY_ID }}" >> ~/.aws/credentials
           echo "aws_secret_access_key=${{ secrets.AWS_SECRET_ACCESS_KEY }}" >> ~/.aws/credentials
